--- a/enablething/config.json
+++ b/enablething/config.json
@@ -1,12 +1,13 @@
 {
     "thing": {
         "last_change_time": "", 
-        "last_config_outcome": "not applicable"
+        "last_config_outcome": "alejandra asked what is going on"
     }, 
     "units": [
             {
             "common": {
                 "configurable": {
+                	"neighbours" : ["caf01485-3bb1-4337-a023-5ffc03bf073b"],
                     "communication": {
                         "address": [
                             "m", 
@@ -31,7 +32,8 @@
                     "function": "noticeboard", 
                     "last_error": "OK", 
                     "status": "ready", 
-                    "unit_id": "3c82ef61-0875-41d3-99ba-101672d79d6b"
+                    "unit_id": "3c82ef61-0875-41d3-99ba-101672d79d6b",
+                    "method":"unit.GenericUnit"
                 }
             }, 
             "unit_specific": {
@@ -42,6 +44,7 @@
         {
             "common": {
                 "configurable": {
+                	"neighbours" : ["d57c1438-2373-4448-8c23-0bd7ad034d6a"],
                     "communication": {
                         "address": [
                             "m", 
@@ -66,7 +69,8 @@
                     "function": "thermometer", 
                     "last_error": "OK", 
                     "status": "ready", 
-                    "unit_id": "caf01485-3bb1-4337-a023-5ffc03bf073b"
+                    "unit_id": "caf01485-3bb1-4337-a023-5ffc03bf073b",
+                    "method": "unit.GenericUnit"
                 }
             }, 
             "unit_specific": {
@@ -77,6 +81,7 @@
         {
             "common": {
                 "configurable": {
+                	"neighbours" : ["d57c1438-2373-4448-8c23-0bd7ad034d6a"],
                     "communication": {
                         "address": [
                             "j", 
@@ -103,7 +108,8 @@
                     "function": "passthru", 
                     "last_error": "OK", 
                     "status": "ready", 
-                    "unit_id": "0d2a1089-be8e-4216-96b6-46552d367091"
+                    "unit_id": "0d2a1089-be8e-4216-96b6-46552d367091",
+                    "method": "unit.PassThruUnit"
                 }
             }, 
             "unit_specific": {
@@ -114,6 +120,7 @@
         {
             "common": {
                 "configurable": {
+                	"neighbours" : ["caf01485-3bb1-4337-a023-5ffc03bf073b"],
                     "communication": {
                         "address": [
                             "j", 
@@ -138,7 +145,8 @@
                     "function": "clock", 
                     "last_error": "OK", 
                     "status": "ready", 
-                    "unit_id": "a789ada1-edb5-4cfe-b1f9-8584abbf8a2f"
+                    "unit_id": "a789ada1-edb5-4cfe-b1f9-8584abbf8a2f",
+                    "method" : "unit.ClockUnit"
                 }
             }, 
             "unit_specific": {
@@ -149,6 +157,7 @@
         {
             "common": {
                 "configurable": {
+                	"neighbours" : ["caf01485-3bb1-4337-a023-5ffc03bf073b"],
                     "communication": {
                         "address": [
                             "j", 
@@ -175,7 +184,8 @@
                     "function": "16 character display", 
                     "last_error": "OK", 
                     "status": "ready", 
-                    "unit_id": "d57c1438-2373-4448-8c23-0bd7ad034d6a"
+                    "unit_id": "d57c1438-2373-4448-8c23-0bd7ad034d6a",
+                    "method" : "unit_custom.charOutputUnit"
                 }
             }, 
             "unit_specific": {
